# luaminiflac

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
csrc/: miniflac.c
rockspec/: miniflac-dev-1.rockspec  miniflac-template.rockspec
src/miniflac/: decoder.lua
